@startuml gof_mediator

'Copyright 2026 Takayoshi Matsuyama
'
'Licensed under the Apache License, Version 2.0 (the "License");
'you may not use this file except in compliance with the License.
'You may obtain a copy of the License at
'
'    http://www.apache.org/licenses/LICENSE-2.0
'
'Unless required by applicable law or agreed to in writing, software
'distributed under the License is distributed on an "AS IS" BASIS,
'WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
'See the License for the specific language governing permissions and
'limitations under the License.

title GoF - Behavioral #05 - Mediator

interface Colleague

class ConcreteColleague1
class ConcreteColleague2

Colleague <|.. ConcreteColleague1
Colleague <|.. ConcreteColleague2

interface Mediator

class ConcreteMediator

Mediator <|.. ConcreteMediator

ConcreteMediator --> ConcreteColleague1
ConcreteMediator --> ConcreteColleague2

@enduml